--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Pomodoro clock</title>
+    <script src="https://kit.fontawesome.com/4e9a2509de.js" crossorigin="anonymous"></script>
   </head>
   <body>
    
